# ppmlx

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SECURITY_AUDIT.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: homebrew-update.yml  release.yml
benchmark_results/: ollama_glm-4.7-flash.json  ollama_qwen3.5_9b.json  ppmlx_glm-4.7-flash.json  ppmlx_qwen3.5_9b.json
homebrew/: README.md  update_formula.sh
homebrew/Formula/: ppmlx.rb
pp_llm/: __init__.py  cli.py  config.py  db.py  engine.py  engine_embed.py  engine_vlm.py  memory.py  modelfile.py  models.py  quantize.py  server.py
ppmlx/: __init__.py  agent.py  analytics.py  answer_quality_replay.py  api_docs.py  batch.py  bench.py  cli.py  compat.py  config.py  db.py  engine.py  engine_embed.py  engine_vlm.py  graph_view.py  history.py  installer.py  mcp.py  memory_store.py  modelfile.py  models.py  playground.py  processor.py  prompt_cache.py  quality_bench.py  quantize.py  registry.py  registry_data.json  render.py  router.py  schema.py  server.py  templates.py  voice.py
ppmlx/templates/: brainstorm.yaml  classify.yaml  code_review.yaml  commit_message.yaml  debug_error.yaml  eli5.yaml  email_draft.yaml  explain_code.yaml  extract_entities.yaml  rewrite.yaml  summarize.yaml  translate.yaml
ppmlx/tui/: __init__.py  _browser.py  _config.py  _launch.py  _model_picker.py  _multi_picker.py  _style.py
scripts/: bench_common.sh  bench_compare.sh  bench_ollama_glm.sh  bench_ollama_gptoss.sh  bench_ollama_ministral.sh  bench_ollama_qwen.sh  bench_ollama_qwen9b.sh  bench_ppmlx_glm.sh  bench_ppmlx_gptoss.sh  bench_ppmlx_ministral.sh  bench_ppmlx_qwen.sh  bench_ppmlx_qwen9b.sh  install.sh  parse_results.py  reinstall.sh  run_all_benchmarks.sh
site/src/layouts/: Layout.astro
tests/: conftest.py  test_agent.py  test_analytics.py  test_answer_quality.py  test_api_docs.py  test_batch.py  test_bench.py  test_cli.py  test_compat.py  test_config.py  test_db.py  test_engine.py  test_engine_embed.py  test_engine_vlm.py  test_garden.py  test_history.py  test_mcp.py  test_memory.py  test_memory_engine.py  test_memory_extractors.py  test_modelfile.py  test_models.py  test_playground.py  test_processor.py  test_prompt_cache.py  test_quality_bench.py  test_quantize.py  test_router.py  test_schema.py  test_server.py  test_templates.py  test_version.py
