[project]
name = "pp-llm"
version = "0.1.0"
description = "Ollama-style CLI for running LLMs on Apple Silicon via MLX"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.13"
dependencies = [
    "mlx-lm>=0.22",
    "mlx-vlm>=0.1.18",
    "mlx-embeddings>=0.2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "typer[all]>=0.12",
    "rich>=13.0",
    "huggingface-hub>=0.24",
    "pydantic>=2.0",
    "sse-starlette>=2.0",
    "httpx>=0.27",
]
[project.scripts]
pp-llm = "pp_llm.cli:app"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.uv]
python = "3.11"
[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-mock>=3.14", "httpx>=0.27", "anyio>=4.0"]
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
[tool.hatch.build.targets.wheel]
packages = ["pp_llm"]
